--- a/public/login.html
+++ b/public/login.html
@@ -5,7 +5,7 @@
         <title>React App</title>
     </head> 
     <body>
-        <div id="root"></div>
-        <script src="index.bundle.js"></script>
+        <div id="login"></div>
+        <script src="login.bundle.js"></script>
     </body>
 </html>
